chandeliers-lus/tests/warn/dead_code/unused-toplevel.stderr
error: method `step` is never used
 --> tests/warn/dead_code/unused-toplevel.rs:5:10
  |
5 |     node foo() returns ();
  |          ^^^ method in this implementation
  |
note: the lint level is defined here
 --> tests/warn/dead_code/unused-toplevel.rs:2:9
  |
2 | #![deny(dead_code)]
  |         ^^^^^^^^^

error: constant `X__lus_0_global` is never used
 --> tests/warn/dead_code/unused-toplevel.rs:8:11
  |
8 |     const X : int = 0;
  |           ^
